--- a/Code/AndroidTutorial/app/src/main/res/values/themes.xml
+++ b/Code/AndroidTutorial/app/src/main/res/values/themes.xml
@@ -12,5 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name= "fontFamily"> sans-serif-black</item>
+        <item name="android:windowTitleSize">34sp</item>
     </style>
 </resources>
