--- a/Code/app/src/main/res/layout/activity_intro_constraint_layout.xml
+++ b/Code/app/src/main/res/layout/activity_intro_constraint_layout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     tools:context=".IntroActivity">
 
     <TextView
@@ -30,5 +31,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.25" />
+
+    <TextView
+        android:id="@+id/tv_CourseDescriptionIntroPage"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="@string/course_description"
+        android:textAlignment="center"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_AndroidTutorialTitleIntroPage" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
