--- a/Code/app/src/main/res/values/dimens.xml
+++ b/Code/app/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="title_font_size">34sp</dimen>
+    <dimen name="padding">5dp</dimen>
 </resources>
