--- a/Code/app/src/main/res/values/colors.xml
+++ b/Code/app/src/main/res/values/colors.xml
@@ -7,4 +7,13 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FF0000</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="blue">#0000FF</color>
+    <color name="green">#00FF00</color>
+    <color name="semi_trasperent_red">#80FF0000</color>
+    <color name="semi_trasperent_yellow">#80FFFF00</color>
+    <color name="semi_trasperent_blue">#800000FF</color>
+    <color name="semi_trasperent_green">#8000FF00</color>
+
 </resources>
